# GroupL1

./: .gitignore  LICENSE  README.md  example.py  output.txt  pyproject.toml
src/custom_regularizer/: GroupL1Regularizer.py  ResNet18.py  ResidualBlock.py  __init__.py  architecture.py  main.py  post-train.py
tests/: test_basic.py
